--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -562,7 +562,7 @@
     //---------------------TopContact component -------------
     .top-contact-cont {
         @media screen and (min-width: 1080px) {
-            padding: 5% 17%;
+            padding: 5% 10%;
         }
         padding: 5% 7%;
         h1 {
@@ -576,6 +576,39 @@
             @media screen and (max-width: 1080px) {
                 text-align: center;
                 font-size: 35px;
+            }
+        }
+    }
+    
+    //--------------------Companies section in Contact page-----------
+    .contact-cont {
+        padding: 2% 10%;
+        .contact-comp-cont {
+            h3 {
+                margin-top: 15px;
+                margin-bottom: 35px;
+                @media screen and (min-width: 1080px) {
+                    text-align: start;
+                    padding-right: 15%;
+                }
+                text-align: center;
+                font-size: $h3-big;
+                font-weight: $light;
+                color: $san-juan-blue;
+                font-family: $public-sans;
+            }
+            .contact-comp-row {
+                align-items: center !important;
+                margin-top: 30px;
+                margin-bottom: 30px;
+                text-align: start;
+                .company-logo {
+                    margin: 20px 0 10px !important;
+                    &:hover {
+                        cursor: pointer;
+                        transform: scale(1.05) !important;
+                    }
+                }
             }
         }
     }
