--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -725,3 +725,47 @@ body {
   cursor: pointer;
   transform: scale(1.05) !important;
 }
+
+.contact-cont .form-cont {
+  padding-top: 3%;
+}
+
+@media screen and (min-width: 1081px) {
+  .contact-cont .form-cont {
+    padding: 2% 5%;
+  }
+}
+
+.contact-cont .form-cont input {
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #1b262f;
+  height: 50px;
+  margin-bottom: 15px;
+}
+
+.contact-cont .form-cont textarea {
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #1b262f;
+  margin-bottom: 35px;
+}
+
+.contact-cont .submit-btn {
+  margin-top: 3%;
+  margin-bottom: 10%;
+  color: #1b262f;
+  border: 1px solid #1b262f;
+  border-radius: 25px;
+  height: 50px;
+  width: 200px;
+}
+
+.contact-cont .submit-btn:hover {
+  transition: all 0.2s ease;
+  background-color: #1b262f;
+  color: white;
+  border: 1px solid #1b262f;
+}
