--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -611,4 +611,40 @@
                 }
             }
         }
+        .form-cont {
+            @media screen and (min-width: 1081px) {
+                padding: 2% 5%;
+            }
+            padding-top: 3%;
+            input {
+                width: 100%;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid $mirage-blue;
+                height: 50px;
+                margin-bottom: 15px;
+            }
+            textarea {
+                width: 100%;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid $mirage-blue;
+                margin-bottom: 35px;
+            }
+        }
+        .submit-btn {
+            margin-top: 3%;
+            margin-bottom: 10%;
+            color: $mirage-blue;
+            border: 1px solid $mirage-blue;
+            border-radius: 25px;
+            height: 50px;
+            width: 200px;
+            &:hover {
+                transition: all 0.2s ease;
+                background-color: $mirage-blue;
+                color: white;
+                border: 1px solid $mirage-blue;
+            }
+        }
     }
