--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -196,6 +196,7 @@
                     width: 150% !important;
                 }
                 width: 80%;
+                font-family:$public-sans;
                 border-radius: 25px;
                 border: 1px solid $link-water-white;
                 padding-left: 20px;
@@ -620,6 +621,7 @@
                 width: 100%;
                 outline: none;
                 border: none;
+                font-family: $public-sans;
                 border-bottom: 1px solid $mirage-blue;
                 height: 50px;
                 margin-bottom: 15px;
@@ -628,6 +630,7 @@
                 width: 100%;
                 outline: none;
                 border: none;
+                font-family: $public-sans;
                 border-bottom: 1px solid $mirage-blue;
                 margin-bottom: 35px;
             }
@@ -640,6 +643,7 @@
             border-radius: 25px;
             height: 50px;
             width: 200px;
+            font-family: $public-sans;
             &:hover {
                 transition: all 0.2s ease;
                 background-color: $mirage-blue;
