--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -652,3 +652,24 @@
             }
         }
     }
+    
+    // -----------------------TopPricing component ---------------------------
+    .top-pricing {
+        @media screen and (min-width: 1080px) {
+            padding: 5% 10%;
+        }
+        padding: 5% 7%;
+        h1 {
+            font-size: $h1-small;
+            font-family: $public-sans;
+            font-weight: $light;
+            color: $mirage-blue;
+            @media screen and (min-width: 1080px) {
+                padding-right: 25%;
+            }
+            @media screen and (max-width: 1080px) {
+                text-align: center;
+                font-size: 35px;
+            }
+        }
+    }
