--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -260,21 +260,6 @@
                 font-family: $public-sans;
                 margin-bottom: 30px;
             }
-            .dark-btn {
-                height: 50px;
-                width: 150px;
-                border-radius: 25px;
-                margin-bottom: 30px;
-                cursor: pointer;
-                border: 1px solid $link-water-white;
-                background-color: transparent;
-                color: $link-water-white;
-                &:hover {
-                    transition: all 0.2s ease-out;
-                    background-color: $link-water-white;
-                    color: $mirage-blue;
-                }
-            }
         }
         .comp-col {
             justify-content: center;
@@ -670,6 +655,92 @@
             @media screen and (max-width: 1080px) {
                 text-align: center;
                 font-size: 35px;
+            }
+        }
+    }
+    
+    //---------------------PricingCard component -----------------
+    .pricing-row {
+        @media screen and (min-width: 755px) {
+            padding: 3% 10%;
+        }
+        padding: 5% 10%;
+        .pricing-col {
+            @media screen and (max-width: 755px) {
+                padding-top: 5%;
+            }
+            @media screen and (max-width: 1080px) {
+                text-align: center;
+                justify-content: center;
+            }
+            h1 {
+                @media screen and (min-width: 756px) {
+                    font-size: 50px;
+                }
+                font-size:40px;
+                font-weight: $light;
+                color: $san-juan-blue;
+                font-family: $public-sans;
+                margin-bottom: 20px;
+            }
+            h3 {
+                font-size: $h3-small;
+                color: $dark-red;
+                font-weight: $light;
+                letter-spacing: -0.05rem;
+                font-family: $public-sans;
+                margin-bottom: 15px;
+            }
+            p {
+                @media screen and (max-width: 1080px) {
+                    padding: 0 7%;
+                }
+                font-size: 15px;
+                font-weight: $light;
+                line-height: 1.5rem;
+                font-family: $public-sans;
+                color: $light-san-juan-blue;
+                margin-bottom: 25px;
+            }
+            hr {
+                @media screen and (max-width: 1080px) {
+                    justify-self: center;
+                }
+                color: lightgray;
+                @media screen and (max-width: 756px) {
+                    width: 100%;
+                }
+                width: 90%;
+                margin: 25px 0;
+            }
+            .feature-row {
+                align-items: center;
+                text-align: center;
+                h4 {
+                    text-align: start;
+                    font-size: 16px;
+                    font-family: $public-sans;
+                    font-weight: $light;
+                    margin: 15px 0;
+                }
+                i {
+                    color: $dark-red;
+                }
+            }
+            .dark-btn {
+                height: 50px;
+                width: 150px;
+                border-radius: 25px;
+                margin-bottom: 30px;
+                cursor: pointer;
+                border: 1px solid $mirage-blue;
+                background-color: transparent;
+                color: $mirage-blue;
+                &:hover {
+                    transition: all 0.2s ease-out;
+                    background-color: $mirage-blue;
+                    color: $link-water-white;
+                }
             }
         }
     }
