changed color features PricingCard

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -875,6 +875,7 @@ body {
 .pricing-row .pricing-col .feature-row h4 {
   text-align: start;
   font-size: 16px;
+  color: #36536b;
   font-family: "Public Sans", sans-serif;
   font-weight: 300;
   margin: 15px 0;
