--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -720,6 +720,7 @@
                 h4 {
                     text-align: start;
                     font-size: 16px;
+                    color: $san-juan-blue;
                     font-family: $public-sans;
                     font-weight: $light;
                     margin: 15px 0;
